--- a/wiki/cs/Draft_Workbench.html
+++ b/wiki/cs/Draft_Workbench.html
@@ -1,14 +1,14 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Draft Workbench/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Draft+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Draft Module (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Draft (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Draft (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Draft_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Draft Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Taslak Tezgah&#305; (3% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente de trabajo Borrador (17% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier Draft (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Draft (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Nacrt Moduli (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Draft (99% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../it/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Ambiente Draft (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../hu/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Draft Workbench/hu (0% translated)" lang="hu" dir="ltr">magyar</a></li>
-<li><a href="../pl/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy Rysunek Roboczy (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Rysunek Roboczy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Draft Module (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho Draft (7% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Draft_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelierul Draft (Desen 2D) (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -590,10 +590,10 @@ On the right a non-planar <a href="../Draft_Wire.html" title="Draft Wire">Draft 
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a class="mw-selflink selflink">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a class="mw-selflink selflink">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -601,35 +601,35 @@ On the right a non-planar <a href="../Draft_Wire.html" title="Draft Wire">Draft 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251201232020
+Cached time: 20260111230458
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.376 seconds
-Real time usage: 0.674 seconds
+CPU time usage: 0.313 seconds
+Real time usage: 0.524 seconds
 Preprocessor visited node count: 1084/1000000
 Post&#8208;expand include size: 20949/2097152 bytes
 Template argument size: 7129/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4974/5000000 bytes
+Unstrip post&#8208;expand size: 4994/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.477      1 -total
- 19.61%   20.488      1 Template:Draft_Tools_navi/cs
- 14.02%   14.643      1 Template:Userdocnavi/cs
- 12.34%   12.895      2 Template:Value
- 11.09%   11.588      2 Template:PropertyData
-  8.10%    8.463      2 Template:Incode
-  7.09%    7.405      2 Template:Navigation_menu_2
-  6.84%    7.149      5 Template:Variable
-  6.65%    6.951      2 Template:Code
-  6.43%    6.719      1 Template:Docnav
+100.00%   53.290      1 -total
+ 20.42%   10.883      1 Template:Draft_Tools_navi/cs
+ 16.48%    8.781      3 Template:VersionPlus
+ 14.67%    7.816      2 Template:Navigation_menu_2
+ 11.69%    6.227      1 Template:Userdocnavi/cs
+  9.00%    4.794      2 Template:Code
+  7.46%    3.978      1 Template:Docnav/cs
+  6.64%    3.538      2 Template:PropertyData
+  5.52%    2.941      2 Template:Value
+  5.16%    2.750      5 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:17826-0!canonical and timestamp 20251201232019 and revision id 1708658. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:17826-0!canonical and timestamp 20260111230458 and revision id 1708658. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
