--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -14,7 +14,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hilfskreis hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hilfskreis um 1 Punkt
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -148,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220027
+Cached time: 20260111231052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.274 seconds
-Preprocessor visited node count: 362/1000000
-Post&#8208;expand include size: 29235/2097152 bytes
-Template argument size: 11370/2097152 bytes
+CPU time usage: 0.084 seconds
+Real time usage: 0.173 seconds
+Preprocessor visited node count: 361/1000000
+Post&#8208;expand include size: 29233/2097152 bytes
+Template argument size: 11368/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +162,19 @@ Unstrip post&#8208;expand size: 1654/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.152      1 -total
- 25.41%   12.488      1 Template:TechDraw_Tools_navi/de
- 22.19%   10.906      1 Template:Userdocnavi/de
- 12.71%    6.249      2 Template:Navigation_menu_2
- 11.91%    5.855      1 Template:GuiCommand/de
-  8.38%    4.120      1 Template:Version/de
-  6.05%    2.975      2 Template:Docnav/de
-  5.49%    2.696      1 Template:KEY
-  5.04%    2.479      2 Template:MenuCommand
-  3.49%    1.713      1 Template:Caption
+100.00%   28.370      1 -total
+ 24.48%    6.944      1 Template:TechDraw_Tools_navi/de
+ 14.08%    3.994      2 Template:Navigation_menu_2
+ 13.40%    3.802      2 Template:Docnav/de
+ 12.54%    3.559      1 Template:GuiCommand/de
+ 11.61%    3.293      4 Template:Button
+  8.25%    2.339      1 Template:Userdocnavi/de
+  7.61%    2.160      2 Template:MenuCommand
+  5.34%    1.516      1 Template:Caption
+  4.71%    1.336      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111220026 and revision id 1736579. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111231051 and revision id 1736740. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
